[package]
name = "pipeline-rtsp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main/rust/lib.rs"

[[bin]]
name = "pipeline-rtsp"
path = "src/main/rust/main.rs"

[[test]]
name = "rtsp_server_test"
path = "src/test/rust/rtsp_server_test.rs"

[dependencies]
gstreamer = "0.23"
gstreamer-rtsp-server = "0.23"
glib = "0.20"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
prometheus = { version = "0.13", features = ["process"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
gstreamer = "0.23"
gstreamer-rtsp-server = "0.23"
tempfile = "3"
